[package]
name = "tblis-sys"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
# Links to hwloc (requires it to be installed on the system) and builds TBLIS with
# support for it.
hwloc = []

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.62"
cmake = "0.1.58"
pkg-config = "0.3.33"

[dependencies]
link-cplusplus = "1.0.12"
openmp-sys = "1.3.0"
